# Education_Management

back-end/: pyproject.toml
back-end/accounts/: serializers.py  tasks.py  urls.py  views.py
back-end/config/: celery.py  settings.py
back-end/dashboard_student_amirabbas/: admin.py  apps.py  models.py  permissions.py  serializers.py
front-end/: package-lock.json  package.json
