[tool.poetry]
name = "back-end"
version = "0.1.0"
description = ""
authors = ["Mohammad Baharlou <mohammadbaharloo96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.31.0"
django = "4.2.11"
amqp = "5.2.0"
asgiref = "3.7.2"
billiard = "4.2.0"
celery = "5.3.6"
certifi = "2024.2.2"
channels = "4.0.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
click-didyoumean = "0.3.0"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
coreapi = "2.3.3"
coreschema = "0.0.4"
django-filter = "24.1"
django-rest-swagger = "2.2.0"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.3.1"
idna = "3.6"
itypes = "1.2.0"
jinja2 = "3.1.3"
kombu = "5.3.5"
markupsafe = "2.1.5"
openapi-codec = "1.3.2"
pillow = "10.2.0"
prompt-toolkit = "3.0.43"
psycopg2 = "2.9.9"
pyjwt = "2.8.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
redis = "5.0.3"
simplejson = "3.19.2"
six = "1.16.0"
sqlparse = "0.4.4"
tzdata = "2024.1"
uritemplate = "4.1.1"
urllib3 = "2.2.1"
vine = "5.1.0"
wcwidth = "0.2.13"
build = "1.1.1"
cachecontrol = "0.14.0"
cleo = "2.1.0"
crashtest = "0.4.1"
distlib = "0.3.8"
dulwich = "0.21.7"
fastjsonschema = "2.19.1"
filelock = "3.13.1"
installer = "0.7.0"
jaraco-classes = "3.3.1"
keyring = "24.3.1"
more-itertools = "10.2.0"
msgpack = "1.0.8"
packaging = "24.0"
pexpect = "4.9.0"
pkginfo = "1.10.0"
platformdirs = "4.2.0"
poetry = "1.8.2"
poetry-core = "1.9.0"
poetry-plugin-export = "1.7.1"
ptyprocess = "0.7.0"
pyproject-hooks = "1.0.0"
pywin32-ctypes = "0.2.2"
rapidfuzz = "3.6.2"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
tomlkit = "0.12.4"
trove-classifiers = "2024.3.3"
virtualenv = "20.25.1"
django-cors-headers = "4.3.1"
aniso8601 = "9.0.1"
graphene = "3.3"
graphene-django = "3.2.0"
graphql-core = "3.2.3"
graphql-relay = "3.2.0"
promise = "2.3"
text-unidecode = "1.3"
check-manifest = "0.49"
ghp-import = "2.1.0"
markdown = "3.6"
mergedeep = "1.3.4"
mkdocs = "1.5.3"
pathspec = "0.12.1"
python-memcached = "1.59"
pyyaml = "6.0.1"
pyyaml-env-tag = "0.1"
setuptools = "69.2.0"
watchdog = "4.0.0"
gunicorn = "21.2.0"
install = "1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
